--- a/meet/20210715_mom.md
+++ b/meet/20210715_mom.md
@@ -249,14 +249,163 @@ data를 merge할 수 있도록 구현하겠습니다.
 - 저장 노드의 라우팅 테이블 '/' 로 고정
   - 기존: ndn-name 마다 라우팅 테이블 생성
   - 변경: / 적용으로 모든 트래픽이 root 를 향할 수 있도록 함
-- 현재까지 특별한 이슈 없음
-  - 현 상태를 완료로 봐도 무방함
+- segmentfetcher 이슈
+  - segmentfetcher 요청이 모두 '/' 로 전달되어 read 함수를 호출하는 이유로 mongodb insert 속도 저하 발생
+    - 기존 '/data-name' 으로 router 에 등록
+    - 또는 다른 방안
 
 ### 2. (50%-성능최적화) 성능개선-코드 최적화
 - 중복 코드 정리 및 메커니즘 정리
 - mongoDB 최적화
   - bulk.insert / insertMany 등
     - 관련 이슈는 difs github Issues 를 통하여 토의
+- appMetaInfo 기반 next-hash 구현
+  - `MetaInfo 디코딩 후 setType, setFreshnessPeriod, setFinalBlock 을 AppMetaInfo보다 먼저 호출하는 경우 모든 앱 정의 블록 손실`
+  - 위 내용은 https://github.com/named-data/ndn-cxx/blob/master/ndn-cxx/meta-info.hpp 코드에서 확인
+  - 해당 부분을 적용하여 appMetaInfo 에 next-hash 적용함
+    - forwardinghint 때문일 수 있음 ('/' 으로 인한)
+    - ndngetfile TIMEOUT 발생 (https://github.com/uni2u/difs-cxx/issues/8)
+
+```
+수정 버전을 기반으로 간단한 테스트 시 ndngetfile TIMEOUT 발생 가능성이 있음
+
+    반드시 발생하는 것이 아니기에 확정지을 수 없음
+        또한, appMetaInfo 를 사용하면 패킷 drop 이 있을 수 있다고 하였는데
+        packet drop 으로 인하여 발생한 것인지 확실하지 않음
+    기존 content 필드에 next-hash 를 넣은 버전은 더미 데이터의 값(알 수 없는 부호)이 프린트 되기에 확인 가능
+    appMetaInfo 활용 버전의 경우 이 값이 프린트 되지는 않음
+        반드시 프린트 할 필요는 없지만 첫번째 패킷만 수신한 것 처럼 프린트 됨
+            ndngetfile 시 file size 에 따른 대기시간으로 볼 때 패킷 수신은 된것 처럼 느껴짐
+    단, appMetaInfo 적용 버전에서 TIMEOUT 이라는 메시지가 발생하는 경우가 있음 (NFD 로그에서 발생하는 것이 아님)
+        1G 사이즈에서는 TIMEOUT 메시지가 프린트 됨
+    push 하기 전 64M, 1G 등 더미 파일에 대한 ndnputfile/ndngetfile 테스트를 진행할 필요 있음
+
+[64M]
+root@playground03:/home/uni2u/difs-mongo# build/bin/ndnputfile /difs /64m /tmp/64m.txt
+root@playground03:/home/uni2u/difs-mongo# build/bin/ndngetfile /difs /64m
+/64m/%00%00
+
+[128M]
+root@playground03:/home/uni2u/difs-mongo# build/bin/ndnputfile /difs /128m /tmp/128m.txt
+root@playground03:/home/uni2u/difs-mongo# build/bin/ndngetfile /difs /128m
+/128m/%00%00
+
+[256M]
+root@playground03:/home/uni2u/difs-mongo# build/bin/ndnputfile /difs /256m /tmp/256m.txt
+root@playground03:/home/uni2u/difs-mongo# build/bin/ndngetfile /difs /256m
+/256m/%00%00
+
+[512M]
+root@playground03:/home/uni2u/difs-mongo# build/bin/ndnputfile /difs /512m /tmp/512m.txt
+root@playground03:/home/uni2u/difs-mongo# build/bin/ndngetfile /difs /512m
+/512m/%00%00
+
+[1G]
+root@playground03:/home/uni2u/difs-mongo# build/bin/ndnputfile /difs /1g /tmp/1g.txt
+root@playground03:/home/uni2u/difs-mongo# build/bin/ndngetfile /difs /1g
+/1g/%00%00
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+Timeout
+root@playground03:/home/uni2u/difs-mongo#
+```
+
 
 ### 3. (60%-메커니즘) 성능개선-HashChain 1차
 - 데이터 패킷 구성 지연
@@ -286,6 +435,12 @@ data를 merge할 수 있도록 구현하겠습니다.
     - 소비자는 다운로드 중인 현재 패킷에 이상이 있으면 즉시 데이터 요청을 하지 않아야 하기 때문
       - Backward Chain 의 경우 현재 패킷에 next-hash 가 DigestSha256 으로 구성
       - 소비자 입장에서 현재 다운로드 된 패킷을 검증할 때 이미 다운로드 된 이전 패킷의 next-hash 로 즉시 검증
+- 방안3) DIFS 데이터 저장 완료 후 검증
+  - DIFS 의 저장완료는 데이터 검증까지 끝난 완전하게 저장된 시점을 의미함
+  - 데이터 저장소 입장으로 실시간 데이터 보다 persistent data 저장에 의미를 둘 수 있음
+  - persistent data 에 의미를 둔다면 per segment 검증보다 데이터 전체에 대한 검증이 의미있음
+    - 이 경우 hash chain 의 의미는 퇴색
+    - 우선 데이터 저장 이후 검증하는 메커니즘을 사용할 수 있음
 
 ---
 
