--- a/meet/20210715_mom.md
+++ b/meet/20210715_mom.md
@@ -269,16 +269,16 @@ data를 merge할 수 있도록 구현하겠습니다.
 ```
 수정 버전을 기반으로 간단한 테스트 시 ndngetfile TIMEOUT 발생 가능성이 있음
 
-    반드시 발생하는 것이 아니기에 확정지을 수 없음
-        또한, appMetaInfo 를 사용하면 패킷 drop 이 있을 수 있다고 하였는데
-        packet drop 으로 인하여 발생한 것인지 확실하지 않음
-    기존 content 필드에 next-hash 를 넣은 버전은 더미 데이터의 값(알 수 없는 부호)이 프린트 되기에 확인 가능
-    appMetaInfo 활용 버전의 경우 이 값이 프린트 되지는 않음
-        반드시 프린트 할 필요는 없지만 첫번째 패킷만 수신한 것 처럼 프린트 됨
-            ndngetfile 시 file size 에 따른 대기시간으로 볼 때 패킷 수신은 된것 처럼 느껴짐
-    단, appMetaInfo 적용 버전에서 TIMEOUT 이라는 메시지가 발생하는 경우가 있음 (NFD 로그에서 발생하는 것이 아님)
-        1G 사이즈에서는 TIMEOUT 메시지가 프린트 됨
-    push 하기 전 64M, 1G 등 더미 파일에 대한 ndnputfile/ndngetfile 테스트를 진행할 필요 있음
+- 반드시 발생하는 것이 아니기에 확정지을 수 없음
+  - 또한, appMetaInfo 를 사용하면 패킷 drop 이 있을 수 있다고 하였는데
+  - packet drop 으로 인하여 발생한 것인지 확실하지 않음
+- 기존 content 필드에 next-hash 를 넣은 버전은 더미 데이터의 값(알 수 없는 부호)이 프린트 되기에 확인 가능
+- appMetaInfo 활용 버전의 경우 이 값이 프린트 되지는 않음
+  - 반드시 프린트 할 필요는 없지만 첫번째 패킷만 수신한 것 처럼 프린트 됨
+    - ndngetfile 시 file size 에 따른 대기시간으로 볼 때 패킷 수신은 된것 처럼 느껴짐
+- 단, appMetaInfo 적용 버전에서 TIMEOUT 이라는 메시지가 발생하는 경우가 있음 (NFD 로그에서 발생하는 것이 아님)
+  - 1G 사이즈에서는 TIMEOUT 메시지가 프린트 됨
+- push 하기 전 64M, 1G 등 더미 파일에 대한 ndnputfile/ndngetfile 테스트를 진행할 필요 있음
 
 [64M]
 root@playground03:/home/uni2u/difs-mongo# build/bin/ndnputfile /difs /64m /tmp/64m.txt
