--- a/meet/20210715_mom.md
+++ b/meet/20210715_mom.md
@@ -263,8 +263,10 @@ data를 merge할 수 있도록 구현하겠습니다.
   - `MetaInfo 디코딩 후 setType, setFreshnessPeriod, setFinalBlock 을 AppMetaInfo보다 먼저 호출하는 경우 모든 앱 정의 블록 손실`
   - 위 내용은 https://github.com/named-data/ndn-cxx/blob/master/ndn-cxx/meta-info.hpp 코드에서 확인
   - 해당 부분을 적용하여 appMetaInfo 에 next-hash 적용함
-    - forwardinghint 때문일 수 있음 ('/' 으로 인한)
-    - ndngetfile TIMEOUT 발생 (https://github.com/uni2u/difs-cxx/issues/8)
+  - ndngetfile 에서 TIMEOUT 발생
+    - 표면상 large data 의 경우 발생
+    - forwardinghint 적용시 라우팅 등록 '/' 때문일 수 있음
+    - ndngetfile TIMEOUT 발생 (아래 로그, https://github.com/uni2u/difs-cxx/issues/8)
 
 ```
 수정 버전을 기반으로 간단한 테스트 시 ndngetfile TIMEOUT 발생 가능성이 있음
