--- a/meet/20210715_mom.md
+++ b/meet/20210715_mom.md
@@ -9,8 +9,10 @@
   - 구름네트웍스: 김성호, 박태웅
 - 일시: 2021.07.15. (목) 11시 00분 ~ 16시 30분
   - COVID19 에 대한 원내 지침으로 2주간 연기
-  - **예정: 2021.07.29. (목) 11시 00분 ~ 16시 30분**
-- 장소: 7-286
+  - 예정: 2021.07.29. (목) 11시 00분 ~ 16시 30분
+  - COVID19 에 대한 비수도권 거리두기 3단계 격상: 원내 지침으로 2주간 연기
+  - 온라인: 2021.07.29. (목) 14:00
+- 장소: 온라인 (Skype); 7-286
 
 ---
 
