--- a/meet/20210715_mom.md
+++ b/meet/20210715_mom.md
@@ -62,7 +62,7 @@
     - data 는 segment 가 모두 표기되기 때문에 하나의 데이터라도 수많은 리스트가 발생할 수 있음
     - data 는 무조건 segment 의 첫번째만 표기함
     - 서로 다른 데이터에 대한 segment 를 구분할 수 있는지 확인 필요
-- 방안1) 을 기본으로 모니터링 담당자와 의견 조율 예정
+- 방안1) 을 기본으로 모니터링 담당자와 의견 조율
   - dashboard 담당(모두텍)에게 메일로 의견 조율함
   - 방안1에 대한 모두텍 담당자의 수용 메일 답변 받음 (2021.07.19. 08:55)
   - DIFS 에서 모니터링 관련 데이터 생성시 segment num 을 추가하여야 함
@@ -137,9 +137,15 @@
 
 ### 6. 1차 KOREN 연동
 #### 6-1. 상태 (1차 KOREN 연동)
-- 8월 KOREN 망 연동 테스트 예정
+- 8월 2주차부터 KOREN 망 연동 테스트 예정
 - 연동 모듈: mwNFD, INC, dashboard
   - mwNFD: 연동에 문제가 없다고 이야기 하지만 실제 연동에는 문제가 발생할 수 있음
+    - https://github.com/etri/mw-nfd
+    - 상기 github 에 포함된 ndn-cxx 를 hash-chain 클래스가 포함되도록 한 뒤 rebuild 하여야 함
+    - 라우터 이름: `/<network>/<site>/%C1.Router/<router-name>`
+      - network: dcn
+      - site: daejeon, seoul, pangyo, busan, gwangju
+      - ex) /dcn/daejeon/%C1.Router/daejeon-R1
   - INC: INC 파트에서 DIFS 와 연동 관련 로컬 테스트를 진행하지 않는한 DIFS 에서는 로컬 연동 테스트를 할 수 없음
   - dashboard: 관련 _Interest_ 에 대한 데이터 확인은 완료되었으며 본 회의 후 dashboard 담당자에게 메일 연락 예정
     - _Interest_ 및 json 형식의 string 예제 전달
