--- a/meet/20210715_mom.md
+++ b/meet/20210715_mom.md
@@ -148,7 +148,7 @@
       - ex) /dcn/daejeon/%C1.Router/daejeon-R1
     - 각 특수 문자가 포함된 name 처리 확인 필요
   - INC: INC 파트에서 DIFS 와 연동 관련 로컬 테스트를 진행하지 않는한 DIFS 에서는 로컬 연동 테스트를 할 수 없음
-  - dashboard: 관련 _Interest_ 에 대한 데이터 확인은 완료되었으며 본 회의 후 dashboard 담당자에게 메일 연락 예정
+  - dashboard: 관련 _Interest_ 에 대한 데이터 확인 및 dashboard 담당자와 의견 조율 
     - _Interest_ 및 json 형식의 string 예제 전달
     - 2021.07.13. 15:53 메일 발송 완료 (아래 메일 원문)
     - 2021.07.16. 11:36 방안1에 대한 내용 메일 발송 완료 (아래 메일 원문)
