--- a/meet/20210715_mom.md
+++ b/meet/20210715_mom.md
@@ -33,6 +33,9 @@
 - 현재까지 기본 기능에 대한 이슈 없음
 - mongodb 자체가 메모리 영향을 받기 때문에 주의깊게 테스트 중
 - mongodb 자체의 성능 향상 포인트를 찾아 적용해볼 수 있음
+  - insertMany 적용 등
+  - DIFS 가 _Interest_ 를 전송하여 data segment 를 받으면
+    - mongo 에 저장 후 validation ? / validation 후 mongo 에 저장?
 
 ---
 
