--- a/meet/20210715_mom.md
+++ b/meet/20210715_mom.md
@@ -52,7 +52,7 @@
     - 노드 데이터 (manifest, segment) 정보 확인
   - dashboard 파트와 연동 테스트 예정 (8월)
     - `ndn://<node-name>/nodeinfo` 
-#### 2-2. 이슈 (기능개선-모니터링)
+#### 2-2. 이슈 (기능개선-모니터링) - dashboard 담당자와 협의 완료
 - 노드 정보에서 manifest 및 segment 는 매우 많아질 수 있음
 - 이 경우 노드 정보 요청 _Interest_ 에 대한 응답이 8,800K 를 넘어설 수 있음
   - 방안1) dashboard 측에서 노드 정보 데이터를 sequence 에 따라 처리
