--- a/meet/20210715_mom.md
+++ b/meet/20210715_mom.md
@@ -420,6 +420,16 @@ Timeout
 root@playground03:/home/uni2u/difs-mongo#
 ```
 
+- mongodb insert 관련
+  - `ndnputfile` 로 인하여 호출된 mongodb 관련 insert 처리
+    - 기존: replace_one 함수
+      - 처리에 시간이 많이 소요됨
+    - 수정: insert_many 함수
+      - 약 300 개의 chunk 를 쌓은 후 insert 처리
+  - collection 접근 횟수에 따른 시간
+    - 1G) insert_one: 12만번 collection 접근
+    - 1G) insert_many: 4,000번 collection 접근
+      - file system type 성능과 비슷
 
 ### 3. (60%-메커니즘) 성능개선-HashChain 1차
 - 데이터 패킷 구성 지연
